--- a/login.html
+++ b/login.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Login Guardians</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styles.css">
-</head> 
-<body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Guardians - Acompanhe seu filho sempre</title>
+        <!-- favicon -->
+        <link rel="icon" type="image/x-icon" href="iconepagina.png" />
+        <!--icones e fontes-->
+        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- fontes do google -->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <!-- css (bootstrap incluso) -->
+        <link href="styles.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="reset.css">
+    </head>
+    <body id="page-top">    
     
 </body>
 </html>
