--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
                 <div class="card-body p-md-5 mx-md-4">
   
                   <div class="text-center">
-                    <img src="/Imagens/iconepagina.png"
+                    <img src="iconepagina.png"
                       style="width: 185px;" alt="logo">
                     <h4 class="mt-1 mb-5 pb-1">Guardians - Acompanhe seu filho</h4>
                   </div>
