--- a/login.html
+++ b/login.html
@@ -14,9 +14,9 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- css (bootstrap incluso) -->
-        <link href="style.css" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="styles.css"
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body id="page-top">    
     
